# DataViewer

./: CMakeLists.txt  README.md
samples/: S31_test_err.s1p
src/: data.cpp  data.h  dataparser.cpp  dataparser.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
